--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.15.11",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "firebase-admin": "^11.7.0",
     "firebase-functions": "^4.3.1"
   },
@@ -24,4 +25,3 @@
     "typescript": "^5.0.4"
   }
 }
-
