--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "@types/node": "^18.15.11",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-sse": "^0.5.3",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.7.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
